# SEEGA

./: .gitignore  README.md  SEEG_Assistant.dia
BrainZoneDetector/: BrainZoneDetector.py  CMakeLists.txt
BrainZoneDetector/Resources/: parc_fullnames.json  parc_shortnames.json
ContactPositionEstimator/: CMakeLists.txt  ContactPositionEstimator.py  README.md  tmp.txt
ContactPositionEstimator/Config/: deeto.config  electrodes.config
ContactPositionEstimator/DeetoS/: README.md  electrode_trajectory.py  image_tools.py
DEETO/: DEETO.py  README.md
DEETO/Config/: deeto.config
DEETO/Tmp/: README.txt
Finalizer/: Finalizer.py
GMPI Computation/: CMakeLists.txt  GMPI Computation.py
GMPIComputation/: GMPIComputation.py
Zone Detector/: Zone Detector.py
docs/: README.md
docs/tutorials/: README.md
docs/tutorials/video/: README.md
docs/tutorials/video/icon/: README.md
